--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="de">
-
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Dinosaur T-Rex Game</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
 
     <body>
         <canvas id="gameCanvas" width="800px" height="450px"></canvas>
         <script type="text/javascript" src="app.js"></script>
     </body>
-
 </html>
